--- a/.project
+++ b/.project
@@ -20,4 +20,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/test/java/DefaultAndroidEmulator.class</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/Selendroid/io/selendroid/standalone/android/impl/DefaultAndroidEmulator.class</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
